fixed header target z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -3562,7 +3562,7 @@ ul.collapsible li .transfer.processed .transfer-status{
   left:0;
   height:85px;
   width:320px;
-  z-index:1;
+  z-index:8;
 }
 
 .header .sub-header-main{
